fix spacing issues

--- a/src/blocks/slider-maxi/style.scss
+++ b/src/blocks/slider-maxi/style.scss
@@ -36,7 +36,7 @@ body.maxi-blocks--active .maxi-slider-block {
 	&__arrow {
 		position: absolute;
 		top: 50%;
-		transform: translate(-50%, -50%);
+		transform: translateY(-50%);
 
 		&--next {
 			right: 0px;
@@ -52,6 +52,7 @@ body.maxi-blocks--active .maxi-slider-block {
 	.maxi-slider-block__dots {
 		display: flex;
 		position: absolute;
+		transform: translateX(-50%);
 		svg {
 			position: absolute;
 		}
